--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ ul {
 	padding-right: 15%;
 }
 li {
-	display: inline-block;	
+	display: inline-block;
+	width: 10%;
 	margin-left: 10px;	
 }
 a {
@@ -40,18 +41,19 @@ a:hover {
 
 .menuRecettes {
 	/*display: none;       afficher une fois fini   */
-}
-.menuRecette li {
+	padding: 0;
+	margin: 0;	
 	list-style-type: none;
-	width: 100%;
-	float: right;	
+	width: 10%;	
+}
+.menuRecette li {	
 	position: relative;
 }
-.menuRecette a {
+.jour {
 	color: #FA8072;	
-	display: flex;
+	display:flex;
 	flex-direction: column;
-	justify-content: center;
+	text-decoration: none;
 }
 
    /*   menu  Mobile    */
